--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Karthikeyan Jeganathan</h1>
+								<p>I am a technical evangelist and machine learning enthusiast, currently pursuing my master's in the field of Data Science and Artificial Intelligence.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="#intro">About</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">Courses</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -69,7 +68,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/xlealqzd">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -343,7 +342,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<ul class="icons">
+							
+				<li><a href="https://www.linkedin.com/in/karthikeyan-jeganathan-0429931b3/" class="icon brands fa-linkedin"
+						target="_blank"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://github.com/zorokat24" class="icon brands fa-github" target="_blank"><span
+							class="label">GitHub</span></a></li>
+							
+				</ul>
+			
+						<p class="copyright">&copy; Karthikeyan. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
