--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Check out my portfolio and feel free to reach out! </p>
 							<article id="education">
 								<h2 class="major">Education</h2>
 								
-								<span class="image main"><img src="images/Amrita2.jpeg" alt="" /></span>
+								<span class="image main"><img src="images/Amrita2.jpg" alt="" /></span>
 								<h4>Amrita Vishwa Vidyapeetham, India | B.Tech Electronics & Instrumentation Engineering, 2012-2016</h4>
 								<p>I'm a result oriented, technical evangelist and a machine learning enthusiast, </p>
 								<hr>
