--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-anchor"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Karthikeyan Jeganathan</h1>
-								<p>I am a technical evangelist and machine learning enthusiast, currently pursuing my master's in the field of Data Science and Artificial Intelligence.</p>
+								<p>A technical evangelist and a machine learning enthusiast, currently pursuing master's in Data Science and Artificial Intelligence</p>
 							</div>
 						</div>
 						<nav>
