--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-anchor"></span>
+							<span class="fa fa-anchor"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
