--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Karthikeyan Jeganathan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="fa fa-anchor"></span>
+							<span class="icon fa-gem"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -49,8 +49,9 @@
 								<h2 class="major">About</h2>
 								
 								<span class="image main"><img src="images/karthik_still_cropped.jpg" alt="" /></span>
-								<p>I'm a result oriented, technical evangelist and a machine learning enthusiast, currently pursuing my master’s in the field of Data Science and Artificial Intelligence at Chalmers University of Technology. I am self motivated to learn new technologies and passionate about teaching and sports. I am interested in domains such as Optimization, Data Analysis, Databases, Natural Language Processing and Machine Learning. Jack of All Trades !
-Check out my portfolio and feel free to reach out! </p>
+								<p>I'm a result oriented, technical evangelist and a machine learning enthusiast, currently pursuing my master’s in the field of Data Science and Artificial Intelligence at Chalmers University of Technology. I am self motivated to learn new technologies and passionate about teaching and sports. I am interested in domains such as Optimization, Data Analysis, Databases, Natural Language Processing and Machine Learning. </p>
+								<p>Jack of All Trades ! Check out my portfolio and feel free to reach out! </p>
+								<p><a href="images/Karthik_CV.pdf">Resume</a>.</p>
 							</article>
 						
 						<!-- Education -->
