--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<span class="image main"><img src="images/karthik_still_cropped.jpg" alt="" /></span>
 								<p>I'm a result oriented, technical evangelist and a machine learning enthusiast, currently pursuing my master’s in the field of Data Science and Artificial Intelligence at Chalmers University of Technology. I am self motivated to learn new technologies and passionate about teaching and sports. I am interested in domains such as Optimization, Data Analysis, Databases, Natural Language Processing and Machine Learning. </p>
 								<p>Jack of All Trades ! Check out my portfolio and feel free to reach out! </p>
-								<p><a href="images/Karthik_CV.pdf">Resume</a>.</p>
+								<p><a href="images/Karthik_CV.pdf" download>Resume</a>.</p>
 							</article>
 						
 						<!-- Education -->
