--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						target="_blank"><span class="label">LinkedIn</span></a></li>
 				<li><a href="https://github.com/zorokat24" class="icon brands fa-github" target="_blank"><span
 							class="label">GitHub</span></a></li>
-							
+				<li><a href="https://www.instagram.com/karthikjeganathan/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>			
 				</ul>
 			
 						<p class="copyright">&copy; Karthikeyan.dev Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
