--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Karthikeyan Jeganathan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/png" href="images/personal_logo.png" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -20,7 +21,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<img id="personal-logo" src="images/personal_logo.png">
+							<!-- <span class="icon fa-gem"></span> -->
 						</div>
 						<div class="content">
 							<div class="inner">
