--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Karthikeyan Jeganathan</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/png" href="images/personal_logo.PNG" />
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -21,8 +21,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img id="personal-logo" src="images/personal_logo.PNG">
-							<!-- <span class="icon fa-gem"></span> -->
+							
+							<span class="icon fa-book"></span> 
 						</div>
 						<div class="content">
 							<div class="inner">
