--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<header id="header">
 						<div class="logo">
 							
-							<span class="icon fa-book"></span> 
+							<span class="icon fa-books"></span> 
 						</div>
 						<div class="content">
 							<div class="inner">
