--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								opportunity to teach and train fresh recruits and experienced personnel. I am self motivated to learn new technologies and passionate about teaching 
 								and sports. I am interested in domains such as Optimization, Data Analysis, Databases, Natural Language Processing and Machine Learning. </p>
 								<p>Check out my portfolio and feel free to reach out! </p>
-								<p><a href="images/Karthik_CV.pdf" download>Resume</a>.</p>
+								<p><a href="images/Karthik CV.pdf" download>Resume</a>.</p>
 							</article>
 						
 						<!-- Education -->
